Update attachment_handler_test and added swagger documentation
